issues with mixed content was fixed, moved to axios for making calls instead of nmp library

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,4 +3,9 @@
     color: #fff;
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
-  }
+}
+
+#priceRange {
+    width: 25vw;
+    color: black!important;
+}
