now search return only items wiith HIGH RES iages only! now selected element show up in detailed window

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,9 @@
     padding: 100px 25px;
     font-family: Montserrat, sans-serif;
 }
-
+.card {
+    cursor: pointer;
+}
 #priceRange {
     width: 25vw;
     color: black!important;
